--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "description": "Manage your Dungeons & Dragons character without paper. A digital dice roller and character sheet app designed for modern sessions, especially for solo players.",
   "icons": [
     {
-      "src": "icon-192x192",
+      "src": "/icons/icon-192x192",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon-512x512",
+      "src": "/icons/icon-512x512",
       "type": "image/png",
       "sizes": "512x512"
     }
