--- a/manifest.json
+++ b/manifest.json
@@ -4,16 +4,16 @@
   "description": "Manage your Dungeons & Dragons character without paper. A digital dice roller and character sheet app designed for modern sessions, especially for solo players.",
   "icons": [
     {
-      "src": "/icons/icon-192x192",
+      "src": "/icons/icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/icons/icon-512x512",
+      "src": "/icons/icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
+  ]
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#111827",
